# project-carlos-on-edge

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  Auxiliary.py  CarlosOnEdge.py  Environment.py  InfluxClient.py  Irrigation.py  LICENSE  Makefile  Pump.py  README.md  ifcInflux.py  prototype.py  pyproject.toml  relay_test.py  requirements.txt  test.ipynb  vamos.py
legacy/: Auxiliary.py  CarlosOnEdge.py  Environment.py  Irrigation.py  Pump.py  ifcInflux.py  install_python.sh  prototype.py  vamos.py
legacy/sensors/: ad_converter.py  auxiliary.py  distance.py  i2c.py  light.py  moisture.py  temperature.py
sensors/: Adafruit_I2C.py  SDL_Adafruit_ADS1x15.py  SDL_Pi_SI1145.py  ad_converter.py  auxiliary.py  distance.py  i2c.py  light.py  moisture.py  temperature.py
