[tool.poetry]
name = "carlos"
version = "0.1.0"
description = "Container to read gardenin related sensor information via my raspberry Pi"
authors = ["Felix Fanghaenel <35657654+flxdot@users.noreply.github.com>"]
license = "MIT"

readme = "README.md"
repository = "https://github.com/flxdot/project-carlos-on-edge"

[tool.poetry.dependencies]
python = "^3.9"
smbus2 = "^0.4.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
pylint = "^2.13.9"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
"Mock.GPIO" = "^0.1.8"

[virtualenvs]
in-project = true
path = ".venv"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
line_length = 88
profile = "black"

[tool.flake8]
line_length = 88
profile = "black"